syntax = 'proto3';

option java_multiple_files = true;
option java_package = "org.demo.proto";
option java_outer_classname = 'ProducerServiceProto';
option objc_class_prefix = 'ProducerService';

package ProducerService;

service ProducerService {
  rpc Hello(HelloRequest) returns (HelloResponse) {};
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string result = 1;
}
